"Add reusable factory for MovementQualificationStrategy integration with MarketOpinion. Update test coverage and resolve API credential initialization for Coinalyze indicators (OI, funding rate, OBV)."